# flaskapps

./: .gitignore  all.txt
30-Days-of-Python-master/: .gitignore  (+2 more)
repos/bento-master/: .bentoignore  .gitmessage  .pre-commit-config.yaml  LICENSE  Makefile  SGREP-README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  validate-message.sh
repos/bento-master/.github/: CODEOWNERS
repos/bento-master/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
repos/bento-master/.github/workflows/: sgrep.yml
repos/bento-master/bento/: __init__.py  base_context.py  network.py  parser.py  paths.py  renderer.py  result.py  tool_runner.py  util.py
repos/bento-master/bento/commands/: check.py  ci.py  init.py  register.py
repos/bento-master/bento/content/: init.py  register.py
repos/bento-master/bento/extra/: __init__.py  base_sgrep.py  click.py  dlint.py  flask.py  gosec.py  grep.md  hadolint.py  jinjalint.py  pyre.py  sgrep.py
repos/bento-master/bento/formatter/: json.py
repos/bento-master/bento/tool/: __init__.py  output.py
repos/bento-master/stubs/: README.md  semantic_version.pyi  venv.pyi
repos/bento-master/stubs/_pytest/: capture.pyi  monkeypatch.pyi  python.pyi
repos/bento-master/stubs/docker/: __init__.pyi  client.pyi
repos/bento-master/stubs/pymmh3/: __init__.pyi
repos/bento-master/tests/: test_context.py  test_formatter.py  test_run_cache.py  test_tool.py  test_tool_runner.py  test_version.py
repos/bento-master/tests/acceptance/: bad.js  generic.yaml
repos/bento-master/tests/commands/: test_autocomplete.py  test_init.py  test_version.py
(+845 files in other folders)
